<resources>
    <string name="app_name">ProfessionHub</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="cnic">CNIC</string>
    <string name="Cnic_Pic">Cnic Pic</string>
    <string name="city">City</string>
    <string name="user_sign_up">User Sign Up</string>
    <string name="employe_sign_up">Worker Sign Up</string>
    <string name="login">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="username">User Name</string>
    <string name="Password">Password</string>
    <string name="total_work">Attempts</string>


    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="Search">Search</string>
    <string name="title_activity_maps">Map</string>

</resources>
