<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainActivity_BG"
    tools:context="solutionz.professionhub.Activity.MainActivityUser">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/sizeNormal"
            android:gravity="top|center"
            android:padding="@dimen/sizeLow"
            android:text="Profile Pic"
            android:textColor="@color/white_color"
            android:textSize="@dimen/textSizeHigh"
            android:textStyle="bold|italic" />


        <solutionz.professionhub.RoundedImageView.RoundedImageView
              android:layout_width="120dp"
              android:layout_height="120dp"
              android:background="@drawable/photo_camera"
              android:layout_gravity="center"
              android:id="@+id/profile_pic"

              />



        <!--first edit text-->
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sizeLow"
            android:layout_marginTop="@dimen/sizeLow"
            android:background="@drawable/edit"

            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/sizeLow"
                android:background="@drawable/username" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/sizeLow"
                android:background="@color/white_color" />

            <EditText
                android:id="@+id/et_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sizeLow"
                android:layout_weight="1"
                android:maxLines="1"
                android:background="@null"
                android:hint="@string/first_name"
                android:padding="@dimen/sizeLow"
                android:textColor="@color/white_color"
                android:textColorHint="@color/white_color"
                android:textSize="@dimen/sizeNormal"
                android:textStyle="italic">

            </EditText>

        </LinearLayout>

        <!--second edit text-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sizeLow"
            android:layout_marginTop="@dimen/sizeLow"
            android:background="@drawable/edit"

            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/sizeLow"
                android:background="@drawable/username" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/sizeLow"
                android:background="@color/white_color" />

            <EditText
                android:id="@+id/et_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sizeLow"
                android:layout_weight="1"
                android:textColor="@color/white_color"
                android:background="@null"
                android:maxLines="1"
                android:hint="@string/last_name"
                android:padding="@dimen/sizeLow"
                android:textColorHint="@color/white_color"
                android:textSize="@dimen/sizeNormal"
                android:textStyle="italic">

            </EditText>

        </LinearLayout>
        <!--third edit text-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sizeLow"
            android:layout_marginTop="@dimen/sizeLow"
            android:background="@drawable/edit"

            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/sizeLow"
                android:background="@drawable/password" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/sizeLow"
                android:background="@color/white_color" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sizeLow"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/password"
                android:maxLines="1"
                android:inputType="numberPassword"
                android:padding="@dimen/sizeLow"
                android:textColor="@color/white_color"
                android:textColorHint="@color/white_color"
                android:textSize="@dimen/sizeNormal"
                android:textStyle="italic">

            </EditText>

        </LinearLayout>
        <!--fourth edit text-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sizeLow"
            android:layout_marginTop="@dimen/sizeLow"
            android:background="@drawable/edit"

            >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/sizeLow"
                android:background="@drawable/cnic1"
                android:tint="@color/white_color" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/sizeLow"
                android:background="@color/white_color" />

            <EditText
                android:id="@+id/et_cnic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sizeLow"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/cnic"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/white_color"
                android:padding="@dimen/sizeLow"
                android:textColorHint="@color/white_color"
                android:textSize="@dimen/sizeNormal"
                android:textStyle="italic">

            </EditText>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sizeLow"
            android:layout_marginTop="@dimen/sizeLow"
            android:background="@drawable/edit"

            >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/sizeLow"
                android:background="@drawable/city"
                android:tint="@color/white_color" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/sizeLow"
                android:background="@color/white_color" />

            <EditText
                android:id="@+id/et_city_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sizeLow"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/city"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/white_color"
                android:padding="@dimen/sizeLow"
                android:textColorHint="@color/white_color"
                android:textSize="@dimen/sizeNormal"
                android:textStyle="italic">

            </EditText>

        </LinearLayout>


        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sizeLow"
            android:layout_marginTop="@dimen/sizeLow"
            android:background="@drawable/button_shape"
            android:padding="@dimen/sizeLow"
            android:text="SignUp"
            android:textColor="@color/white_color"
            android:textSize="@dimen/textSizeHigh"
            android:textStyle="italic|bold" />


    </LinearLayout>


</ScrollView>
